# forex-supervised-scanner

./: .gitignore  ARCHITECTURE.md  README.md
apps/forex-scanner/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
apps/forex-scanner/app/: __init__.py  mt5_availability.py
apps/forex-scanner/config/: settings.example.json
apps/forex-scanner/docs/: adaptive_thresholds.md  asset_concentration_report.md  autonomous_evidence_builder.md  autonomous_pipeline.md  autonomous_policy_engine.md  autonomous_readiness_gate.md  autonomous_recovery_planner.md  autonomous_scenario_runner.md  autonomous_supervisor.md  backtest_comparison_report.md  command_catalog.md  config_profile_validator.md  configuration_ui.md  daily_safe_ops_checklist.md  dashboard.md  data_health_report.md  data_provider_quality.md  decision_traces.md  demo_readiness_report.md  edge_validation_report.md  experiment_registry.md  failure_diagnostics_report.md  generated_runbook.md  index.md  local_mt5_realtime_validation.md  local_paper_operation_runbook.md  local_validation.md  min_score_policy.md  missing_functionality_audit.md  mt5_readonly_validation.md  mt5_symbol_mapping_audit.md  near_miss_review_queue.md  next_safe_bot_command.md  notifications.md  operations.md  operator_dashboard.md  operator_decision_doctor.md  ops_consolidation_plan.md  paper_performance.md  paper_performance_report.md  (+23 more)
apps/forex-scanner/scripts/: _demo_bot_cli.py  adaptive_thresholds_report.py  alert_rules.py  archive_records.py  asset_concentration_report.py  audit_integrity.py  autonomous_policy_report.py  (+91 more)
(+343 files in other folders)
