[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-ta-scanner"
version = "0.1.0"
description = "Local Streamlit Forex technical-analysis scanner and backtesting tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.7,<3.0",
  "plotly>=5.22,<7.0",
  "streamlit>=1.56,<2.0",
  "yfinance>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
broker = [
  "MetaTrader5>=5.0,<6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.config" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
